# personal_web_static

./: .bazelrc  .gitignore  .replit  BUILD  Dockerfile  MODULE.bazel  README.md  WORKSPACE  WORKSPACE.orig  bundle.py  bundle.spec  makefile  package-lock.json  package.json  requirements.txt
docs/: portfolio-site-redesign-reference.md
docs/superpowers/plans/: 2026-04-30-site-redesign.md
new_public/: BUILD  index.html
new_public/css/: BUILD
new_public/images/: BUILD
new_public/js/: BUILD
new_public/libs/: BUILD
new_public/scss/: BUILD  styles.scss
public/: BUILD  index.html  sitemap.xml
public/css/: BUILD
public/images/: BUILD
public/js/: BUILD  scripts.js  scripts.min.js
public/libs/: BUILD
public/scss/: BUILD  styles.scss
scripts/: static-qa.mjs
server/: BUILD  server.go
src/: index.html  sitemap.xml
src/css/: styles.css
src/js/: scripts.js  scripts.min.js
src/py/: rjsmin.py
