## MODULE.bazel
module(
    name = "personal_web",
    repo_name = "com_zhach_personal_web",
)

##################
# Go Deps        #
##################
bazel_dep(name = "rules_go", version = "0.52.0")
bazel_dep(name = "gazelle", version = "0.42.0")

load("@rules_go//go:deps.bzl", "go_register_toolchains", "go_rules_dependencies")
load("@gazelle//:deps.bzl", "gazelle_dependencies", "go_repository")
go_rules_dependencies()
go_register_toolchains(version = "1.19.3")
gazelle_dependencies()

##################
# Proto Deps     #
##################
# rules_proto defines abstract rules for building Protocol Buffers.
bazel_dep(name = "rules_proto", version = "7.1.0")

load("@rules_proto//proto:repositories.bzl", "rules_proto_dependencies", "rules_proto_toolchains")
rules_proto_dependencies()
rules_proto_toolchains()

##################
# Package rules  #
##################
bazel_dep(name = "rules_pkg", version = "1.0.1")

load("@rules_pkg//:deps.bzl", "rules_pkg_dependencies")
rules_pkg_dependencies()

##################
# Python Rules   #
##################
bazel_dep(name = "rules_python", version = "1.1.0")

###################
# JS Rules        #
###################
http_archive(
    name = "io_bazel_rules_closure",
    sha256 = "9498e57368efb82b985db1ed426a767cbf1ba0398fd7aed632fc3908654e1b1e",
    strip_prefix = "rules_closure-0.12.0",
    urls = [
        "https://mirror.bazel.build/github.com/bazelbuild/rules_closure/archive/0.12.0.tar.gz",
        "https://github.com/bazelbuild/rules_closure/archive/0.12.0.tar.gz",
    ],
)

load("@io_bazel_rules_closure//closure:repositories.bzl", "rules_closure_dependencies", "rules_closure_toolchains")
rules_closure_dependencies()
rules_closure_toolchains()

###################
# Sass Rules      #
###################
bazel_dep(name = "gzgz_rules_sass", version = "1.0.0")

bazel_dep(name = "rules_nodejs", version = "6.3.3")

load("@rules_nodejs//:repositories.bzl", "build_bazel_rules_nodejs_dependencies")
build_bazel_rules_nodejs_dependencies()

# fetches nodejs, npm, and yarn
load("@rules_nodejs//:index.bzl", "node_repositories")
node_repositories()

load("@rules_nodejs//:index.bzl", "npm_install")
npm_install(
    name = "npm",
    package_json = "//public:package.json",
    package_lock_json = "//public:package-lock.json",
)

load("@gzgz_rules_sass//:defs.bzl", "sass_repositories")
sass_repositories()